RESOLVED FIXED76402
Web Inspector: CSS backend doesn't conform to Inspector.json
https://bugs.webkit.org/show_bug.cgi?id=76402
Summary Web Inspector: CSS backend doesn't conform to Inspector.json
Peter Rybin
Reported 2012-01-16 13:03:07 PST
Source/WebCore/inspector/InspectorStyleSheet.cpp:133 "linkedSheet" and "inlineSheet" are not enum constants (C++ TypeBuilder::CSS::CSSMedia::Source) Source/WebCore/inspector/InspectorStyleSheet.cpp:851 "shorthandValues" and "properties" are not declared (C++ TypeBuilder::CSS::CSSStyle)
Attachments
Patch (4.44 KB, patch)
2012-01-17 03:33 PST, Alexander Pavlov (apavlov)
yurys: review+
Alexander Pavlov (apavlov)
Comment 1 2012-01-17 03:33:57 PST
Alexander Pavlov (apavlov)
Comment 2 2012-01-17 03:57:49 PST
Note You need to log in before you can comment on or make changes to this bug.