Web Inspector: CSS backend doesn't conform to Inspector.json https://bugs.webkit.org/show_bug.cgi?id=76402

Reviewed by Yury Semikhatsky.

* inspector/Inspector.json:
* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyleSheet::buildObjectForStyle):

Canonical link: https://commits.webkit.org/93252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105139 268f45cc-cd09-0410-ab3c-d52691b4dbfc